# Event-Aware-Traffic-Forecasting

./: .gitignore  README.md  docker-compose.yml  fuse_traffic_training.ipynb  gdelt_artlist_result.json  gdelt_tone_result.json
artifacts/spatial_grid/: adjacency_matrix.npz  metadata.json  node_list.npy  road_network_graph.pkl
backend/: .gitignore  Dockerfile  pyproject.toml  requirements-py314.txt  requirements.txt  test_gdelt.py
backend/app/: database.py  main.py
backend/app/core/: config.py
backend/app/ingestion/: __init__.py  adapters.py  interfaces.py  router.py  service.py
backend/app/nlp/: __init__.py  evaluation.py  interfaces.py  router.py  service.py  workflow.py
backend/app/preprocessing/: taglish_translator.py
backend/app/schemas/: __init__.py  ingestion.py  nlp.py
backend/app/spatial/: __init__.py  router.py
backend/app/workers/: celery_app.py  tasks.py
backend/ml/: graph_wavenet.py
backend/models/: road_graph.py
backend/schemas/: __init__.py
backend/services/: spatial_mapping.py
backend/utils/: database.py
data/corpus/: taglish_english_parallel.jsonl
docs/: PIPELINE_INTEGRATION.md  TAGLISH_TRANSLATION.md
frontend/: App.js  app.json  package-lock.json  package.json
ml/: API_SETUP_GUIDE.md  LABELING_GUIDE.md  MULTI_SOURCE_WORKFLOW.md  REAL_TIME_LABELING_WORKFLOW.md  requirements.txt
ml/data/: x_labeled_batch_20260511_1852_auto_bootstrap.csv  x_multi_source_training.csv
ml/notebooks/: fuse_traffic_training.ipynb  interactive_labeling.ipynb
ml/scripts/: bootstrap_binary_labels.py  fetch_multi_source_training_data.py  (+17 more)
(+40 files in other folders)
