[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-aware-traffic-backend"
version = "0.1.0"
description = "Backend services for Event-Aware Traffic Forecasting"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.2.0,<3.0.0",
  "redis>=5.0.0,<6.0.0",
  "celery>=5.4.0,<6.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "geoalchemy2>=0.14.0,<1.0.0",
  "pandas>=2.2.0,<3.0.0",
  "networkx>=3.3,<4.0.0",
  "osmnx>=1.9.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "beautifulsoup4>=4.12.0,<5.0.0",
  "scrapy>=2.11.0,<3.0.0",
  "torch>=2.2.0,<3.0.0",
  "transformers>=4.40.0,<5.0.0",
  "scikit-learn>=1.4.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "ruff>=0.4.0,<1.0.0",
  "mypy>=1.9.0,<2.0.0"
]

[tool.setuptools]
packages = ["app"]
